2016-06-28  Ben Elliston  <bje@gnu.org>

	* aclocal.m4, Makefile.in: Regenerate with automake 1.15.
	* configure: Regenerate.

2016-06-22  Bernhard Reutner-Fischer  <rep.dot.nop@gmail.com>

	* configure.ac, dejagnu.h, runtest, runtest.exp,
	baseboards/am33_2.0-libremote.exp, baseboards/androideabi.exp,
	baseboards/arm-ice.exp, baseboards/arm-sid.exp,
	baseboards/arm-sim.exp, baseboards/basic-sid.exp,
	baseboards/basic-sim.exp, baseboards/cris-sim.exp,
	baseboards/d30v-sim.exp, baseboards/fr30-sim.exp,
	baseboards/frv-sim.exp, baseboards/gdbserver-sample.exp,
	baseboards/i386-sid.exp, baseboards/iq2000-sim.exp,
	baseboards/jmr3904-sim.exp, baseboards/linux-gdbserver.exp,
	baseboards/linux-libremote.exp, baseboards/m68k-sid.exp,
	baseboards/mcore-moto-sim.exp, baseboards/mcore-sim.exp,
	baseboards/mips-lnews-sim.exp, baseboards/mips-lsi-sim.exp,
	baseboards/mips-sim-idt32.exp, baseboards/mips-sim-idt64.exp,
	baseboards/mips-sim-mti32.exp, baseboards/mips-sim-mti64.exp,
	baseboards/mips-sim-mti64_64.exp,
	baseboards/mips-sim-mti64_n32.exp, baseboards/mips-sim-sde32.exp,
	baseboards/mips-sim-sde64.exp, baseboards/mips-sim.exp,
	baseboards/mmixware-sim.exp, baseboards/mn10200-sim.exp,
	baseboards/mn10300-sim.exp, baseboards/moxie-sim.exp,
	baseboards/mt-sid.exp, baseboards/multi-sim.exp,
	baseboards/powerpc-sim.exp, baseboards/powerpcle-sim.exp,
	baseboards/rx-sim.exp, baseboards/sh-sid.exp,
	baseboards/sh-sim.exp, baseboards/sparc-sim.exp,
	baseboards/sparc64-sim.exp, baseboards/sparclite-sim-le.exp,
	baseboards/sparclite-sim.exp, baseboards/tx39-sim.exp,
	baseboards/unix.exp, baseboards/v850-sim.exp,
	baseboards/visium-sim.exp, baseboards/vr4100-sim.exp,
	baseboards/vr4111-sim.exp, baseboards/vr4300-sim.exp,
	baseboards/xtensa-sim.exp, lib/debugger.exp, lib/dejagnu.exp,
	lib/dg.exp, lib/ftp.exp, lib/kermit.exp, lib/remote.exp,
	lib/rlogin.exp, lib/rsh.exp, lib/standard.exp, lib/target.exp,
	lib/targetdb.exp, lib/telnet.exp, lib/tip.exp, lib/utils.exp,